objects/voice_connector__VCExcludedPhoneNumbers__c.object
<CustomObject>
    <fields>
        <fullName>voice_connector__VCCTIDevName__c</fullName>
        <label>CTI Dev Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCCTIExcludedPhoneNumber__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCCTIUniqueExternalId__c</fullName>
        <description>This Field is used to concatenate phone number and provider Name</description>
        <externalId>true</externalId>
        <label>Unique External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>VCExcludedPhoneNumbers</label>
    <listViews>
        <fullName>voice_connector__All</fullName>
        <columns>NAME</columns>
        <columns>voice_connector__VCCTIExcludedPhoneNumber__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>voice_connector__VCCTIUniqueExternalId__c</columns>
        <columns>voice_connector__VCCTIDevName__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EPN-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCExcludedPhoneNumbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>